--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,18 +38,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href=".//css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body>
     <header>
         <a href="../index.html">
-            <img id="logo" src="../images/logoSin.png" alt="Logo de Equilibrio Natural" class="w-75 d-none d-md-block">
+            <img id="logo" src="../images/logo-sin.png" alt="Logo Residencial Maria Auxiliadora" class="w-75 d-none d-md-block">
         </a>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-
-                <img src="../images/logoSin.png" alt="logo-mobile" class="w-25 d-md-none">
+                <a href="../index.html">
+                <img src="../images/logo-sin.png" alt="logo-mobile" class="w-25 d-md-none">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
