--- a/pages/staff.html
+++ b/pages/staff.html
@@ -38,18 +38,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href=".//css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body>
     <header>
         <a href="../index.html">
-            <img id="logo" src="../images/logoSin.png" alt="Logo de Equilibrio Natural" class="w-75 d-none d-md-block">
+            <img id="logo" src="../images/logo-sin.png" alt="Logo Residencial Maria Auxiliadora" class="w-75 d-none d-md-block">
         </a>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-
-                <img src="../images/logoSin.png" alt="logo-mobile" class="w-25 d-md-none">
+                <a href="../index.html">
+                <img src="../images/logo-sin.png" alt="logo-mobile" class="w-25 d-md-none">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -67,13 +68,13 @@
                             <a class="nav-link" href="../pages/actividades.html">Actividades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/staff.html">Staff</a>
+                            <a class="nav-link" href="../pages/staff.html"><strong>Staff</strong></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/preguntasfrecuentes.html">Preguntas Frecuentes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/contacto.html"><strong>Contacto</strong></a>
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -85,36 +86,8 @@
         </nav>
     </header>
     <main>
-        <h1>Contacto</h1>
-        <div class="container-form">
-            <form>
-                <div class="mb-3">
-                    <label for="nombre" class="form-label">Nombre</label>
-                    <input type="nombre" class="form-control" id="nombre" aria-describedby="nombre">
-                </div>
-                <div class="mb-3">
-                    <label for="apellido" class="form-label">Apellido</label>
-                    <input type="apellido" class="form-control" id="apellido" aria-describedby="apellido">
-                </div>
-                <div class="mb-3">
-                    <label for="telefono" class="form-label">Telefono</label>
-                    <input type="telefono" class="form-control" id="telefono" aria-describedby="telefono">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label"> Envie su consulta y nos pondremos en
-                        contacto a la brevedad.</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-
-
-                <button type="submit" class="boton-enviar btn btn-primary">Enviar</button>
-            </form>
-        </div>
+        <h1>Staff</h1>
+        
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
