--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
 <body>
     <header>
         <a href="../index.html">
-            <img id="logo" src="./images/logo-sin.png" alt="Logo Residencial Maria Auxiliadora" class="w-75 d-none d-md-block">
+            <img id="logo" src="./images/logo-sin.png" alt="Logo Residencial Maria Auxiliadora"
+                class="w-75 d-none d-md-block">
         </a>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a href="./index.html">
+
                 <img src="./images/logo-sin.png" alt="logo-mobile" class="w-25 d-md-none">
-                </a>
+
                 <button class="barra navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +91,7 @@
 
     <main>
         <section>
-            <img id="imagenbanner" src="./images/logo auxiliadora.webp" alt="banner" class="d-none d-md-block" />
+            <img id="imagenbanner" src="./images/logo auxiliadora.webp" alt="banner" class="d-md-block" />
             <img id="imagenbanner-mobile" src="./images/logo auxiliadora.webp" alt="banner" class="d-md-none" />
             <h1>¡Bienvenidos a Residencial Maria Auxiliadora!</h1>
             <article class="textobienvenida">
@@ -155,12 +156,10 @@
 
         <h3>Residencial Maria Auxiliadora - Florida Uruguay</h3>
         <div class="social-icons">
-            <a href="#"
-                target="Pagina de FACEBOOK ">
+            <a href="#" target="Pagina de FACEBOOK ">
                 <i class="fab fa-facebook"></i>
             </a>
-            <a href="#"
-                target="Pagina de INSTAGRAM ">
+            <a href="#" target="Pagina de INSTAGRAM ">
                 <i class="fab fa-instagram"></i>
             </a>
             <a href="#" target="Whatsapp ">
