--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -44,13 +44,14 @@
 <body>
     <header>
         <a href="../index.html">
-            <img id="logo" src="../images/logo-sin.png" alt="Logo Residencial Maria Auxiliadora" class="w-75 d-none d-md-block">
+            <img id="logo" src="../images/logo-sin.png" alt="Logo Residencial Maria Auxiliadora"
+                class="w-75 d-none d-md-block">
         </a>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a href="../index.html">
+
                 <img src="../images/logo-sin.png" alt="logo-mobile" class="w-25 d-md-none">
-                </a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -71,7 +72,8 @@
                             <a class="nav-link" href="../pages/staff.html">Staff</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/preguntasfrecuentes.html"><strong>Preguntas Frecuentes</strong></a>
+                            <a class="nav-link" href="../pages/preguntasfrecuentes.html"><strong>Preguntas
+                                    Frecuentes</strong></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/contacto.html">Contacto</a>
@@ -87,7 +89,7 @@
     </header>
     <main>
         <h1>Preguntas Frecuentes</h1>
-        
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
@@ -100,12 +102,10 @@
         </a>
         <h3>Residencial Maria Auxiliadora - Florida Uruguay</h3>
         <div class="social-icons">
-            <a href="#"
-                target="Pagina de FACEBOOK ">
+            <a href="#" target="Pagina de FACEBOOK ">
                 <i class="fab fa-facebook"></i>
             </a>
-            <a href="#"
-                target="Pagina de INSTAGRAM ">
+            <a href="#" target="Pagina de INSTAGRAM ">
                 <i class="fab fa-instagram"></i>
             </a>
             <a href="#" target="Whatsapp ">
