--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
 
                 <p>
                     Ubicado en la hermosa ciudad de Florida, nuestro residencial ofrece
-                    un entorno tranquilo y sereno, rodeado de exuberantes jardines y
-                    áreas verdes que fomentan la paz y la conexión con la naturaleza.
-                    Nuestras amplias y cómodas instalaciones están diseñadas para
+                    un entorno tranquilo y sereno. Nuestras amplias y cómodas instalaciones están diseñadas para
                     garantizar el máximo confort y seguridad, permitiendo a nuestros
                     residentes disfrutar de una vida plena y activa.
                 </p>
