--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url"
         content="https://proyecto-coderhouse-ezequiel-luzardo-5f7qf3g8m-ezeluzardo.vercel.app/index.html" />
     <meta property="og:image"
-        content="https://proyecto-coderhouse-ezequiel-luzardo-bnqpny8sw-ezeluzardo.vercel.app/images/logoSin.png" />
+        content="https://ezeluzardo.github.io/Maria_Auxiliadora_Florida/images/logo-sin.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Residencial Maria Auxiliadora Florida" />
     <meta name="description"
@@ -91,8 +91,8 @@
 
     <main>
         <section>
-            <img id="imagenbanner" src="./images/logo auxiliadora.webp" alt="banner" class="d-md-block" />
-            <img id="imagenbanner-mobile" src="./images/logo auxiliadora.webp" alt="banner" class="d-md-none" />
+            <img id="imagenbanner" src="./images/banner-maria-auxiliadora.png" alt="banner" class="d-none d-md-block"/>
+            <img id="imagenbanner-mobile" src="./images/banner-maria-auxiliadora.png" alt="banner" class="d-md-none"/>
             <h1>¡Bienvenidos a Residencial Maria Auxiliadora!</h1>
             <article class="textobienvenida">
                 <p>
