--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
         content="Bienvenido a Residencial María Auxiliadora, un hogar cálido y acogedor para nuestros queridos ancianos en la hermosa ciudad de Florida, Uruguay. Nuestro compromiso es brindar atención integral y amorosa a nuestros residentes, ofreciendo servicios de alta calidad para garantizar su bienestar y felicidad. Contamos con personal altamente capacitado y una amplia gama de actividades recreativas para mantener a nuestros residentes activos y comprometidos. ¡Descubre cómo cuidamos y honramos la vida en María Auxiliadora!" />
     <meta property="og:url"
         content="https://proyecto-coderhouse-ezequiel-luzardo-5f7qf3g8m-ezeluzardo.vercel.app/index.html" />
-    <meta property="og:image"
-        content="https://ezeluzardo.github.io/Maria_Auxiliadora_Florida/images/logo-sin.png" />
+    <meta property="og:image" content="https://ezeluzardo.github.io/Maria_Auxiliadora_Florida/images/logo-sin.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Residencial Maria Auxiliadora Florida" />
     <meta name="description"
         content="Bienvenido a Residencial María Auxiliadora, un hogar cálido y acogedor para nuestros queridos ancianos en la hermosa ciudad de Florida, Uruguay. Nuestro compromiso es brindar atención integral y amorosa a nuestros residentes, ofreciendo servicios de alta calidad para garantizar su bienestar y felicidad. Contamos con personal altamente capacitado y una amplia gama de actividades recreativas para mantener a nuestros residentes activos y comprometidos. ¡Descubre cómo cuidamos y honramos la vida en María Auxiliadora!" />
     <title>Residencial Maria Auxiliadora</title>
-   
+    <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
+    <link rel="manifest" href="./icons/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -85,8 +90,8 @@
 
     <main>
         <section>
-            <img id="imagenbanner" src="./images/banner-maria-auxiliadora.png" alt="banner" class="d-none d-md-block"/>
-            <img id="imagenbanner-mobile" src="./images/banner-maria-auxiliadora.png" alt="banner" class="d-md-none"/>
+            <img id="imagenbanner" src="./images/banner-maria-auxiliadora.png" alt="banner" class="d-none d-md-block" />
+            <img id="imagenbanner-mobile" src="./images/banner-maria-auxiliadora.png" alt="banner" class="d-md-none" />
             <h1>¡Bienvenidos a Residencial Maria Auxiliadora!</h1>
             <article class="textobienvenida">
                 <p>
@@ -148,10 +153,12 @@
 
         <h3>Residencial Maria Auxiliadora - Florida Uruguay</h3>
         <div class="social-icons">
-            <a href="https://www.facebook.com/profile.php?id=100094386355402&mibextid=LQQJ4d" target="Pagina de FACEBOOK ">
+            <a href="https://www.facebook.com/profile.php?id=100094386355402&mibextid=LQQJ4d"
+                target="Pagina de FACEBOOK ">
                 <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://instagram.com/residencialmariaauxiliadora?igshid=MzRlODBiNWFlZA==" target="Pagina de INSTAGRAM ">
+            <a href="https://instagram.com/residencialmariaauxiliadora?igshid=MzRlODBiNWFlZA=="
+                target="Pagina de INSTAGRAM ">
                 <i class="fab fa-instagram"></i>
             </a>
             <a href="https://api.whatsapp.com/send?phone=94987952" target="Whatsapp ">
