--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -17,7 +17,12 @@
     <meta name="description"
         content="Bienvenido a Residencial María Auxiliadora, un hogar cálido y acogedor para nuestros queridos ancianos en la hermosa ciudad de Florida, Uruguay. Nuestro compromiso es brindar atención integral y amorosa a nuestros residentes, ofreciendo servicios de alta calidad para garantizar su bienestar y felicidad. Contamos con personal altamente capacitado y una amplia gama de actividades recreativas para mantener a nuestros residentes activos y comprometidos. ¡Descubre cómo cuidamos y honramos la vida en María Auxiliadora!" />
     <title>Residencial Maria Auxiliadora</title>
-   
+    <link rel="apple-touch-icon" sizes="180x180" href="../icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../icons/favicon-16x16.png">
+    <link rel="manifest" href="../icons/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
