modificaciones en texto bienvenida
modificaciones en texto bienvenida

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </p>
 
                 <p>
-                    Nuestro equipo de profesionales altamente capacitados y cariñosos
+                    Nuestro equipo de profesionales altamente capacitados
                     está disponible las 24 horas del día, los 7 días de la semana, para
                     brindar atención médica y asistencia personalizada. Además,
                     ofrecemos una amplia gama de actividades recreativas y sociales que
@@ -129,7 +129,7 @@
                 <p>
                     En Residencial María Auxiliadora, creemos que cada etapa de la vida es valiosa y merece ser vivida
                     con dignidad y alegría. Estamos dedicados a crear un ambiente amoroso y compasivo donde nuestros
-                    residentes puedan disfrutar de su jubilación rodeados de compañía y apoyo.
+                    residentes puedan disfrutar rodeados de compañía y apoyo.
                 </p>
                 <p>
                     Les extendemos una cordial invitación para visitar nuestro residencial y experimentar de primera
