--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -88,6 +88,29 @@
     </header>
     <main>
         <h1>Preguntas Frecuentes</h1>
+        <section>
+            <article class="preguntasfrecuentes">
+                <li><strong>¿Se ofrecen actividades recreativas y sociales para los residentes?</strong></li>
+                <li>Sí, tenemos un programa completo de actividades recreativas y sociales adaptadas a los intereses y
+                    habilidades de nuestros residentes. Esto incluye ejercicios, talleres, eventos sociales y salidas
+                    programadas.</li>
+                <li><strong>¿Se adapta el menú a necesidades dietéticas específicas?</strong></li>
+                <li>Sí, nuestro equipo de cocina está preparado para atender necesidades dietéticas especiales, como
+                    vegetarianismo, alergias o restricciones alimenticias. Nos aseguramos de que todas las comidas sean
+                    saludables y nutritivas.</li>
+                <li><strong>¿Cómo se manejan los problemas de seguridad y emergencias?</strong></li>
+                <li>Nuestro residencial cuenta con protocolos de seguridad y un plan de emergencias establecido. Tenemos
+                    personal capacitado para responder rápidamente a situaciones de emergencia y garantizar la seguridad
+                    de nuestros residentes.</li>
+
+
+
+
+            </article>
+        </section>
+
+
+
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -101,10 +124,12 @@
         </a>
         <h3>Residencial Maria Auxiliadora - Florida Uruguay</h3>
         <div class="social-icons">
-            <a href="https://www.facebook.com/profile.php?id=100094386355402&mibextid=LQQJ4d" target="Pagina de FACEBOOK ">
+            <a href="https://www.facebook.com/profile.php?id=100094386355402&mibextid=LQQJ4d"
+                target="Pagina de FACEBOOK ">
                 <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://instagram.com/residencialmariaauxiliadora?igshid=MzRlODBiNWFlZA==" target="Pagina de INSTAGRAM ">
+            <a href="https://instagram.com/residencialmariaauxiliadora?igshid=MzRlODBiNWFlZA=="
+                target="Pagina de INSTAGRAM ">
                 <i class="fab fa-instagram"></i>
             </a>
             <a href="https://api.whatsapp.com/send?phone=94987952" target="Whatsapp ">
