--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -88,34 +88,34 @@
     <main>
         <h1>Contacto</h1>
         <div class="container-form">
-            <form>
+            <form action="procesar_formulario.php" method="post">
                 <div class="mb-3">
                     <label for="nombre" class="form-label">Nombre</label>
-                    <input type="nombre" class="form-control" id="nombre" aria-describedby="nombre">
+                    <input type="text" name="nombre" class="form-control" id="nombre" aria-describedby="nombre">
                 </div>
                 <div class="mb-3">
                     <label for="apellido" class="form-label">Apellido</label>
-                    <input type="apellido" class="form-control" id="apellido" aria-describedby="apellido">
+                    <input type="text" name="apellido" class="form-control" id="apellido" aria-describedby="apellido">
                 </div>
                 <div class="mb-3">
                     <label for="telefono" class="form-label">Telefono</label>
-                    <input type="telefono" class="form-control" id="telefono" aria-describedby="telefono">
+                    <input type="tel" name="telefono" class="form-control" id="telefono" aria-describedby="telefono">
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input type="email" name="exampleInputEmail1" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label"> Envie su consulta y nos pondremos en
+                    <label for="exampleFormControlTextarea1" class="form-label">Envie su consulta y nos pondremos en
                         contacto a la brevedad.</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea name="exampleFormControlTextarea1" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-
-
+        
                 <button type="submit" class="boton-enviar btn btn-primary">Enviar</button>
             </form>
         </div>
+        
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
