--- a/index.html
+++ b/index.html
@@ -32,24 +32,25 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,800;1,200;1,500&family=Ysabeau:wght@300;400;500;600;800;900&display=swap"
         rel="stylesheet" />
+        <link href="/dist/output.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body>
     <header>
-        <a href="./index.html">
+        <a href="../index.html">
             <img id="logo" src="./images/logo-sin.png" alt="Logo Residencial Maria Auxiliadora"
                 class="w-75 d-none d-md-block">
         </a>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
 
-                <img src="./images/logo-sin.png" alt="logo-mobile" class="w-25 d-md-none">
+                <img src="../images/logo-sin.png" alt="logo-mobile" class="w-25 d-md-none">
 
                 <button class="barra navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -59,22 +60,20 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html"><strong>Inicio</strong></a>
+                            <a class="nav-link active" aria-current="page" href="../src/index.html"><strong>Inicio</strong></a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/actividades.html">Actividades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                            <a class="nav-link" href="../pages/staff.html">Staff</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/actividades.html">Actividades</a>
+                            <a class="nav-link" href="../pages/preguntasfrecuentes.html">Preguntas Frecuentes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/staff.html">Staff</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/preguntasfrecuentes.html">Preguntas Frecuentes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -90,8 +89,8 @@
 
     <main>
         <section>
-            <img id="imagenbanner" src="./images/banner-maria-auxiliadora.png" alt="banner" class="d-none d-md-block" />
-            <img id="imagenbanner-mobile" src="./images/banner-maria-auxiliadora.png" alt="banner" class="d-md-none" />
+            <img id="imagenbanner" src="../images/banner-maria-auxiliadora.png" alt="banner" class="d-none d-md-block" />
+            <img id="imagenbanner-mobile" src="../images/banner-maria-auxiliadora.png" alt="banner" class="d-md-none" />
             <h1>¡Bienvenidos a Residencial Maria Auxiliadora!</h1>
             <article class="textobienvenida">
                 <p>
