--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,800;1,200;1,500&family=Ysabeau:wght@300;400;500;600;800;900&display=swap"
         rel="stylesheet" />
-        <link href="/dist/output.css" rel="stylesheet">
+    <link href="/dist/output.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -60,9 +60,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../src/index.html"><strong>Inicio</strong></a>
+                            <a class="nav-link active" aria-current="page"
+                                href="../src/index.html"><strong>Inicio</strong></a>
                         </li>
-                        
+
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/actividades.html">Actividades</a>
                         </li>
@@ -89,7 +90,8 @@
 
     <main>
         <section>
-            <img id="imagenbanner" src="../images/banner-maria-auxiliadora.png" alt="banner" class="d-none d-md-block" />
+            <img id="imagenbanner" src="../images/banner-maria-auxiliadora.png" alt="banner"
+                class="d-none d-md-block" />
             <img id="imagenbanner-mobile" src="../images/banner-maria-auxiliadora.png" alt="banner" class="d-md-none" />
             <h1>¡Bienvenidos a Residencial Maria Auxiliadora!</h1>
             <article class="textobienvenida">
@@ -139,6 +141,44 @@
                 <h2>Atentamente, El equipo de Residencial María Auxiliadora </h2>
             </article>
         </section>
+
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="lc-block mb-4">
+                        <div class="ratio ratio-4x3 min-vh-50" lc-helper="gmap-embed">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3303.921578829741!2d-56.224780024572134!3d-34.097149373140134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a102b6ef82273d%3A0xb60e51c20976eaf4!2sFaustino%20Lopez%20905%2C%2094000%20Florida%2C%20Departamento%20de%20Florida!5e0!3m2!1ses-419!2suy!4v1691637663553!5m2!1ses-419!2suy"
+                                width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                    </div><!-- /lc-block -->
+                </div><!-- /col -->
+                <div class="col-md-6 px-5">
+                    <div class="lc-block mb-4">
+                        <div editable="rich">
+                            <h2 class="display-6 fw-bolder"> Contactanos!<p></p>
+                                <p></p>
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="lc-block mb-4">
+                        <div editable="rich">
+                            <p class="lead">Faustino Lopez 905 esq. Sarandi</p>
+                            <p class="lead">094 987 952</p>
+                            <p class="lead">mariaauxiliadora@gmail.com</p>
+
+                        </div>
+                    </div>
+                    <div class="lc-block mb-4">
+                        <div editable="rich">
+                            <p>Por consultas, no dudes en escribirnos o pasar por nuestras instalaciones.</p>
+                        </div>
+                    </div><!-- /lc-block -->
+                </div><!-- /col -->
+            </div>
+        </div>
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
